--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,7 @@ Description: The package includes tools for: Data handling (download / write for
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
